ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: myingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - <Host>
    secretName: tlssecret
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: /app(/|$)(.*)
        backend:
          service:
            name: <Service>
            port: 
              number: <Port>
